examples/test/testpolicy17592.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17592
  namespace: namespace122
spec:
  podSelector:
    matchLabels:
      key5: value18
      key23: value47
      key49: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value37
          key17: value16
      podSelector:
        matchLabels:
          key6: value37
          key29: value29
          key13: value16
